<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/map_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.amap.api.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" 
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#D999"
            android:orientation="vertical"
            android:paddingRight="5dp" >

            <Button
                android:id="@+id/buttonScale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonScale" />

           <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <CheckBox
                    android:id="@+id/scale_toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/scale" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/zoom_position" />

                <CheckBox
                    android:id="@+id/zoom_toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/zoom_buttons" />
                
                <RadioGroup
                    android:id="@+id/zoom_position"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checkedButton="@+id/bottom_left"
                    android:orientation="vertical" >

                    <RadioButton
                        android:id="@+id/zoom_bottom_right"
                        android:text="@string/bottom_right" />

                    <RadioButton
                        android:id="@+id/zoom_center_right"
                        android:text="@string/center_right" />
                </RadioGroup>

                <CheckBox
                    android:id="@+id/compass_toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/compass" />

                <CheckBox
                    android:id="@+id/mylocation_toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/mylocation_layer" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>