<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/map_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.amap.api.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#D999"
            android:orientation="vertical"
            android:paddingRight="5dp" >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/logo_position" />

                <RadioGroup
                    android:id="@+id/logo_position"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checkedButton="@+id/bottom_left"
                    android:orientation="vertical" >

                    <RadioButton
                        android:id="@+id/bottom_left"
                        android:text="@string/bottom_left" />

                    <RadioButton
                        android:id="@+id/bottom_center"
                        android:text="@string/bottom_center" />

                    <RadioButton
                        android:id="@+id/bottom_right"
                        android:text="@string/bottom_right" />
                </RadioGroup>

            


        </LinearLayout>
    </ScrollView>

</RelativeLayout>